# FinancialAnalysis

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  proposal.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
backend/: config.py  graph.py  llm_client.py  mlflow_utils.py  state.py
backend/agents/: advisory.py  debate.py  fundamental.py  market_data.py  news.py  orchestrator.py  quant.py  risk.py  sentiment.py
backend/data/: market_api.py  mock_data.py  news_api.py
backend/feature_store/: __init__.py  definitions.py  registry.py
backend/notification/: __init__.py  email_sender.py  templates.py
backend/observability/: __init__.py  audit_trail.py  token_tracker.py
config/: schedule.example.json
deploy/: .env.example  README.md  deploy.sh  docker-compose.prod.yml  install_linux.sh
docs/: agent_explanations.md  ai_security_risk_register.md  architecture.md  deployment.md  explainable_responsible_ai.md  feature_store.md  mlops_overview.md  mlsecops_pipeline.md
frontend/: app.py
requirements/: index.md
scripts/: register_schedule.bat  run.bat  run.sh  scheduled_analysis.bat  scheduled_analysis.py  scheduled_analysis.sh  scheduler_daemon.py  smoke_test.sh  test_email_smtp.py
tests/: conftest.py  test_debate_mechanism.py  test_e2e_mock.py  test_excel_validation.py  test_frontend.py  test_imports.py  test_intent_classification.py  test_mlflow_utils.py  test_real_agents.py  test_recommendation.py  test_risk_assessment.py  test_sentiment_analysis.py
tools/: build_grid_excel.py  grid_trading_calculator.xlsx
(+101 files in other folders)
