[project]
name = "multi-agent-investment-research"
version = "0.1.0"
description = "Multi-Agent AI Investment Research System with Bull vs Bear Debate"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "yfinance>=0.2.0",
    "duckduckgo-search>=6.0.0",
    "streamlit>=1.30.0",
    "structlog>=24.0.0",
    "pydantic-settings>=2.0.0",
    "openpyxl>=3.1.0",
    "mlflow>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
python_classes = ["Test*", "Benchmark*"]
python_files = ["test_*.py", "bench_*.py"]
python_functions = ["test_*", "bench_*"]

[tool.setuptools.packages.find]
include = ["backend*", "frontend*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
